@@ -1,3 +1,8 @@
+2005-08-23  David Moore  <dcm@acm.org>
+
+	* iptc-data.c, iptc-data.h: added iptc_data_sort() function
+	* iptc/main.c: added -s argument to sort datasets
+
 2005-08-18  David Moore  <dcm@acm.org>
 
 	* iptc/main.c: fields longer than 256 bytes will print correctly
